--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+#############################
+# Terraform files to ignore #
+#############################
+.terraform          # Terraform cache
+*.tfstate           # a plaintext Terraform state file
+*.tfstate.backup
+*.tfstate.lock.*
