--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cloudfront:update:build:deploy": "npm run cloudfront:setup && npm run cloudfront:build:deploy",
     "cloudfront:update:build:deploy:nc": "npm run cloudfront:setup && npm run cloudfront:build:deploy:nc",
     "serverless:remove": "sls remove",
-    "deploy:azure":"npm run build && az storage blob upload-batch -s './dist' -d '$web' --account-name 'staticfrontendlg'"
+    "deploy:azure":"npm run build && az storage blob upload-batch -s './dist' -d '$web' --overwrite --account-name 'staticfrontendlg'"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
